--- a/src/app/shared/form-controls/input-numeric/input-numeric.component.scss
+++ b/src/app/shared/form-controls/input-numeric/input-numeric.component.scss
@@ -5,12 +5,6 @@
  * See LICENSE.txt in the project root for complete license information.
  */
 
-export * from './array-library';
-
-export * from './cloneDeep';
-
-export * from './event-emission';
-
-export * from './form-helper';
-
-export * from './format-library';
+.full-width {
+  width: 100%;
+}
