Update accent color contrast (Angular Material)

--- a/src/styles/angular-material-theme.scss
+++ b/src/styles/angular-material-theme.scss
@@ -93,8 +93,8 @@ $emp-land-accent-palette: (
     50: rgba($emp-land-text-color, 0.8),
     100: rgba($emp-land-text-color, 0.8),
     200: rgba($emp-land-text-color, 0.8),
-    300: rgba($emp-land-text-color, 0.8),
-    400: rgba($emp-land-text-color, 0.8),
+    300: white,
+    400: white,
     500: white,
     600: white,
     700: white,
