--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -27,7 +27,7 @@
 
   .card-title {
     flex: 1 1 auto;
-    color: $title-color;
+    color: $accent-color;
     font-size: 14pt;
     font-weight: 600;
   }
@@ -76,19 +76,19 @@
   padding: 0 16px 16px 16px !important;
 }
 
-.card-body-without-top {
+.card-body-padding-with-top {
   margin-top: 0;
-  padding: 0 16px 16px 16px !important;
+  padding: 16px !important;
 }
 
 .card-header-raised {
-  border-bottom: 3px solid $title-border-color;
+  border-bottom: 3px solid $accent-color-light;
 
   @include raised-header;
 }
 
 .card-header-flat {
-  border-bottom: 3px solid $title-border-color;
+  border-bottom: 3px solid $accent-color-light;
 }
 
 .card-shadow {
