--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -76,12 +76,11 @@ $box-shadow: 0 3px 1px -2px rgba(44, 57, 66, 0.1),
 
 .list-item-checkbox {
   margin: auto;
-  padding: 0 4px 0 8px;
 }
 
 .list-item-container {
   margin-left: 4pt;
-  padding: 4pt 8pt 8pt 8pt;
+  padding: 4pt 0 8pt 8pt;
   width: 100%;
   font-size: 8pt;
 }
