--- a/src/app/views/certificate-emission/certificate-edition.component.html
+++ b/src/app/views/certificate-emission/certificate-edition.component.html
@@ -17,7 +17,7 @@
         <div class="object-preview-container">
 
           <object
-            [data]="certificate.mediaLink.url | safeUrl"
+            [data]="certificate.mediaLink.url | empSafeUrl"
             class="object-preview mat-elevation-z1"
             (error)="onMediaLinkError()">
 
