--- a/src/app/views/land-list/land-explorer/land-list-controls.component.html
+++ b/src/app/views/land-list/land-explorer/land-list-controls.component.html
@@ -1,4 +1,4 @@
-<div class="fx-item" [@expandCollapse] *ngIf="itemsSelected.length > 0">
+<div class="fx-item" [@empExpandCollapse] *ngIf="itemsSelected.length > 0">
 
   <div class="list-selection-header fx-row-container fx-items-center">
 
