--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -128,7 +128,7 @@
 
                 {{item.name}}
                 <span *ngIf="!!item.recordingData.recordingTime">
-                  &nbsp;&nbsp; | &nbsp;&nbsp; {{item.recordingData.recordingTime | dateTimeFormat}}
+                  &nbsp;&nbsp; | &nbsp;&nbsp; {{item.recordingData.recordingTime | empDateTimeFormat}}
                 </span>
                 <span *ngIf="!!item.recordingData.recordID">
                   &nbsp;&nbsp; | &nbsp;&nbsp; {{item.recordingData.recordID}}
@@ -145,7 +145,7 @@
                     <div class="fx-row-container bold-text">
                       {{item.name}}
                       <span *ngIf="!!item.recordingData.recordingTime">
-                        &nbsp;&nbsp; | &nbsp;&nbsp; {{item.recordingData.recordingTime | dateTimeFormat}}
+                        &nbsp;&nbsp; | &nbsp;&nbsp; {{item.recordingData.recordingTime | empDateTimeFormat}}
                       </span>
                       <span *ngIf="!!item.recordingData.recordID">
                         &nbsp;&nbsp; | &nbsp;&nbsp; {{item.recordingData.recordID}}
