--- a/src/app/views/registration/recording-acts/recording-act-editor.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-editor.component.html
@@ -107,7 +107,7 @@
               <div class="label nowrap">Fecha de registro:</div>
               <div class="nowrap">
                 {{!recordingAct.amendedAct.recordingData.recordingTime ? '-' :
-                   recordingAct.amendedAct.recordingData.recordingTime | dateTimeFormat}}
+                   recordingAct.amendedAct.recordingData.recordingTime | empDateTimeFormat}}
               </div>
             </div>
 
@@ -115,7 +115,7 @@
               <div class="label nowrap">Fecha de presentación:</div>
               <div class="nowrap">
                 {{!recordingAct.amendedAct.recordingData.recordingTime ? '-' :
-                   recordingAct.amendedAct.recordingData.recordingTime | dateTimeFormat}}
+                   recordingAct.amendedAct.recordingData.recordingTime | empDateTimeFormat}}
               </div>
             </div>
 
