--- a/src/app/views/transactions/transaction-editor/transaction-editor.component.html
+++ b/src/app/views/transactions/transaction-editor/transaction-editor.component.html
@@ -49,8 +49,8 @@
 
 </ng-container>
 
-<emp-ng-file-print-preview #filePrintPreview
+<emp-ng-file-preview #filePreview
   title="Impresión de orden de pago"
   [hint]="transaction.transactionID">
 
-</emp-ng-file-print-preview>
+</emp-ng-file-preview>
