--- a/src/app/shared/form-controls/file-control/file-control.component.html
+++ b/src/app/shared/form-controls/file-control/file-control.component.html
@@ -33,7 +33,7 @@
 
     <ng-container *ngIf="fileControlConfig.showFileInfo">
       <div class="file-info">
-        <p><strong>{{ file.name }}</strong></p>
+        <p class="wrap"><strong>{{ file.name }}</strong></p>
         <p *ngIf="!file.download$">{{file.sizeString}}</p>
 
         <ng-container *ngIf="file.download$ | async as download">
@@ -53,7 +53,7 @@
       </div>
 
       <div *ngIf="fileControlConfig.tagRequired" class="file-tag-container">
-        <div class="tag tag-info tag-small" *ngIf="file.uid && file.tag">{{file.tag}}</div>
+        <div class="tag tag-success tag-small" *ngIf="file.uid && file.tag">{{file.tag}}</div>
 
         <emp-ng-select name="tag" *ngIf="!file.uid"
           bindLabel="name"
