--- a/src/app/views/transactions/workflow-history/workflow-history.component.html
+++ b/src/app/views/transactions/workflow-history/workflow-history.component.html
@@ -15,25 +15,25 @@
     <ng-container matColumnDef="checkInTime">
       <th mat-header-cell *matHeaderCellDef> Recibido </th>
       <td mat-cell *matCellDef="let row" class="nowrap">
-        {{ row.checkInTime | dateTimeFormat: 'DMY HH:mm' }}
+        {{ row.checkInTime | empDateTimeFormat: 'DMY HH:mm' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="checkOutTime">
       <th mat-header-cell *matHeaderCellDef> Terminado </th>
       <td mat-cell *matCellDef="let row" class="nowrap">
-        {{ row.checkInTime === row.endProcessTime ? '' : row.endProcessTime | dateTimeFormat: 'DMY HH:mm' }}
+        {{ row.checkInTime === row.endProcessTime ? '' : row.endProcessTime | empDateTimeFormat: 'DMY HH:mm' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="endProcessTime">
       <th mat-header-cell *matHeaderCellDef> Entregado </th>
       <td mat-cell *matCellDef="let row" class="nowrap">
-        {{ row.checkOutTime | dateTimeFormat: 'DMY HH:mm' }}
+        {{ row.checkOutTime | empDateTimeFormat: 'DMY HH:mm' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="elapsedTime">
       <th mat-header-cell *matHeaderCellDef class="text-align-right"> Trabajo </th>
       <td mat-cell *matCellDef="let row" class="text-align-right nowrap">
-        {{ row.checkInTime === row.endProcessTime ? '' : row.elapsedTime | timeFormat }}
+        {{ row.checkInTime === row.endProcessTime ? '' : row.elapsedTime | empTimeFormat }}
       </td>
     </ng-container>
     <ng-container matColumnDef="statusName">
@@ -48,7 +48,7 @@
 
     <ng-container matColumnDef="footerElapsedTime">
       <td mat-footer-cell *matFooterCellDef [attr.colspan]="6" class="text-align-right">
-        {{ elapsedTimeTotal | timeFormat }}
+        {{ elapsedTimeTotal | empTimeFormat }}
       </td>
     </ng-container>
     <ng-container matColumnDef="footerNotes">
