--- a/src/app/workspaces/land-transactions/transactions-main-page/parts/land-registration.component.html
+++ b/src/app/workspaces/land-transactions/transactions-main-page/parts/land-registration.component.html
@@ -70,7 +70,7 @@
 
 </div>
 
-<emp-ng-file-print-preview #filePrintPreview
+<emp-ng-file-preview #filePreview
   title="Impresión de sello interesado"
   [hint]="instrumentRecording.instrument.typeName">
-</emp-ng-file-print-preview>
+</emp-ng-file-preview>
