--- a/src/app/views/_reports-controls/data-table/data-table.component.html
+++ b/src/app/views/_reports-controls/data-table/data-table.component.html
@@ -52,14 +52,15 @@
             [ngClass]="{'text-align-right': column.type === dataTableColumnType.decimal,
                         'nowrap': column.type === dataTableColumnType.text_nowrap,
                         'item-strikethrough': column.isColumnStrikethrough && row[column.fieldConditionStrikethrough],
-                        'column-checkbox': column.type === dataTableColumnType.check_box}">
+                        'column-checkbox': column.type === dataTableColumnType.check_box,
+                        'column-action': column.type === dataTableColumnType.delete_button}">
 
             <ng-container [ngSwitch]="column.type">
               <ng-container *ngSwitchCase="dataTableColumnType.decimal">
                 {{row[column.field] | empDecimal: column.digits}}
               </ng-container>
               <ng-container *ngSwitchCase="dataTableColumnType.date">
-                {{row[column.field] | dateTimeFormat}}
+                {{row[column.field] | empDateTimeFormat}}
               </ng-container>
               <ng-container *ngSwitchCase="dataTableColumnType.text_link">
                 <a class="item-link" (click)="onItemLinkClicked(row)">
@@ -85,11 +86,21 @@
               </ng-container>
 
               <ng-container *ngSwitchCase="dataTableColumnType.check_box">
-                <mat-checkbox
+                <mat-checkbox empNgStopPropagation
                   [checked]="selection.isSelected(row)"
-                  (click)="$event.stopPropagation()"
                   (change)="selection.toggle(row)">
                 </mat-checkbox>
+              </ng-container>
+
+              <ng-container *ngSwitchCase="dataTableColumnType.delete_button">
+                <button mat-icon-button
+                  empNgStopPropagation
+                  [title]="deleteButtonText"
+                  (click)="onDeleteButtonClicked(row)">
+                  <mat-icon>
+                    delete
+                  </mat-icon>
+                </button>
               </ng-container>
 
               <ng-container *ngSwitchDefault>
