Update access-control module

--- a/src/app/views/_access-control/subjects/subjects-table.component.html
+++ b/src/app/views/_access-control/subjects/subjects-table.component.html
@@ -24,8 +24,8 @@
       <th mat-header-cell *matHeaderCellDef> Email </th>
       <td mat-cell *matCellDef="let row">
         <span class="text-highlight">{{ row.eMail }}</span><br><br>
-        <span class="tag">{{ row.status.name }}</span>
-        {{ !!row.lastAccess ? ( row.lastAccess | dateTimeFormat ) : '-' }}
+        <span class="tag" [class.tag-disabled]="row.status.uid !== 'Active'">{{ row.status.name }}</span>
+        {{ !!row.lastAccess ? ( row.lastAccess | empDateTimeFormat ) : '-' }}
       </td>
     </ng-container>
 
