--- a/src/app/views/_access-control/access-control-viewer/access-control-filter.component.html
+++ b/src/app/views/_access-control/access-control-viewer/access-control-filter.component.html
@@ -32,7 +32,7 @@
 
       </div>
 
-      <div class="fx-item-none fx-end fx-items-end" [style.paddingTop.px]="12" [style.paddingBottom.px]="2">
+      <div class="fx-item-none fx-items-end" [style.paddingBottom.px]="2">
 
         <button title="Buscar"
           [disabled]="!isFormValid"
