--- a/src/app/views/_security/change-password/change-password-form.component.html
+++ b/src/app/views/_security/change-password/change-password-form.component.html
@@ -9,36 +9,39 @@
   <div class="fx-column-container" [ngClass]="isRequiredAction ? 'fx-gap' : 'fx-gap-half'"
   [class.label-no-padding]="!isRequiredAction">
 
-    <div class="fx-item">
+    <div class="fx-item-none">
       <label for="userID">Cuenta de acceso:</label>
       <input type="text" id="userID" name="userID" autocomplete="off" class="text-box"
         formControlName="userID"
-        [class.invalid-control]="formHelper.isControlInvalid(form.controls.userID)">
+        [class.invalid-control]="!isRequiredAction && formHelper.isControlInvalid(form.controls.userID)"
+        [class.invalid-control-secondary]="isRequiredAction && formHelper.isControlInvalid(form.controls.userID)">
     </div>
 
-    <div class="fx-item">
+    <div class="fx-item-none">
       <label for="currentPassword">Contraseña actual:</label>
       <input [type]="showPassword ? 'text' : 'password'"
         id="current-password" name="current-password" autocomplete="current-password" class="text-box"
         formControlName="currentPassword"
-        [class.invalid-control]="formHelper.isControlInvalid(form.controls.currentPassword)">
+        [class.invalid-control]="!isRequiredAction &&formHelper.isControlInvalid(form.controls.currentPassword)"
+        [class.invalid-control-secondary]="isRequiredAction && formHelper.isControlInvalid(form.controls.currentPassword)">
     </div>
 
-    <mat-divider class="horizontal-slim"
+    <mat-divider class="horizontal-md"
       [class.white]="isRequiredAction"
       [style.margin-top.px]="4">
 
     </mat-divider>
 
-    <div class="fx-item">
+    <div class="fx-item-none">
       <label for="new-password">Nueva contraseña:</label>
       <input [type]="showPassword ? 'text' : 'password'"
         id="new-password" name="newPassword" autocomplete="new-password" class="text-box"
         formControlName="newPassword"
-        [class.invalid-control]="formHelper.isControlInvalid(form.controls.newPassword)">
+        [class.invalid-control]="!isRequiredAction &&formHelper.isControlInvalid(form.controls.newPassword)"
+        [class.invalid-control-secondary]="isRequiredAction && formHelper.isControlInvalid(form.controls.newPassword)">
     </div>
 
-    <div class="fx-item">
+    <div class="fx-item-none">
       <label for="confirmNewPassword">
         Confirmar nueva contraseña:
         <span class="warning-text" *ngIf="form.errors?.matchOther && !isRequiredAction">
@@ -48,17 +51,18 @@
       <input [type]="showPassword ? 'text' : 'password'"
         id="confirmNewPassword" name="confirmNewPassword" autocomplete="new-password" class="text-box"
         formControlName="confirmNewPassword"
-        [class.invalid-control]="formHelper.isControlInvalid(form.controls.confirmNewPassword) ||
-                                 form.errors?.matchOther">
+        [class.invalid-control]="!isRequiredAction && (formHelper.isControlInvalid(form.controls.confirmNewPassword) ||
+                                 form.errors?.matchOther)"
+        [class.invalid-control-secondary]="isRequiredAction && (formHelper.isControlInvalid(form.controls.confirmNewPassword) ||
+                                 form.errors?.matchOther)">
     </div>
 
-    <div class="fx-item" *ngIf="!isRequiredAction">
+    <div class="fx-item-none" *ngIf="!isRequiredAction">
 
-      <mat-checkbox
+      <mat-checkbox empNgStopPropagation
         [checked]="showPassword"
-        (click)="$event.stopPropagation"
         (change)="showPassword = !showPassword"
-        [color]="isRequiredAction ? 'warn' : 'primary'">
+        [color]="isRequiredAction ? 'accent' : 'primary'">
         Mostrar contraseñas
       </mat-checkbox>
 
@@ -71,7 +75,7 @@
 
       </ng-container>
 
-      <mat-divider class="horizontal-slim"
+      <mat-divider class="horizontal-md"
         [style.margin-bottom.px]="0">
 
       </mat-divider>
@@ -79,16 +83,16 @@
     </ng-container>
 
 
-    <div class="fx-row-container fx-space-between fx-items-center"
+    <div class="fx-item-none fx-row-container fx-space-between fx-items-center"
       [style.margin]="isRequiredAction ? '0.5rem 0' : null">
 
       <div class="fx-item-none">
 
         <mat-checkbox *ngIf="isRequiredAction"
+          empNgStopPropagation
           [checked]="showPassword"
-          (click)="$event.stopPropagation"
           (change)="showPassword = !showPassword"
-          [color]="isRequiredAction ? 'warn' : 'primary'">
+          [color]="isRequiredAction ? 'accent' : 'primary'">
           Mostrar contraseñas
         </mat-checkbox>
 
@@ -98,8 +102,7 @@
 
         <button type="submit"
           [class.btn]="!formHelper.isFormReady(form)"
-          [class.btn-action]="formHelper.isFormReady(form) && !isRequiredAction"
-          [class.btn-warning]="formHelper.isFormReady(form) && isRequiredAction"
+          [class.btn-action]="formHelper.isFormReady(form)"
           [class.spinner]="submitted && isRequiredAction"
           (click)="onUpdateCredentialsClicked()">
           Cambiar contraseña
@@ -124,7 +127,7 @@
 
 <ng-template #authenticationError>
 
-  <div [ngClass]="isRequiredAction ? 'authentication-error' : null">
+  <div class="fx-item" [ngClass]="isRequiredAction ? 'authentication-error' : null">
 
     <ng-container *ngIf="form.controls.newPassword.errors ||
                          (isRequiredAction && form.errors?.matchOther)">
