Fix some UI issues caused by the style update

--- a/src/app/views/land-list/land-list-items/transaction-list-item.component.html
+++ b/src/app/views/land-list/land-list-items/transaction-list-item.component.html
@@ -1,48 +1,50 @@
-<div class="fx-row-container sm-fx-column-container fx-gap-two sm-fx-gap-half">
+<div class="fx-row-container sm-fx-column-container fx-gap-size sm-fx-gap-half" style="--gap-size: 1.5rem">
 
-  <div class="fx-item-size" style="--size: 35%">
+  <div class="fx-item sm-fx-item-none">
     <div class="label nowrap">Tipo de trámite</div>
-    <div class="primary-text nowrap"><strong>{{transaction.subtype}}</strong></div>
+    <div class="primary-text"><strong>{{transaction.subtype}}</strong></div>
     <div>{{transaction.type}}</div>
   </div>
 
-  <div class="fx-item-size" style="--size: 25%">
+  <div class="fx-item-size sm-fx-item-none" style="--size: 160px">
     <div *ngIf="transaction?.transactionID">
       <div class="label nowrap">Trámite RPP</div>
-      <div>
-        <div class="primary-text nowrap"><strong>{{transaction?.transactionID}}</strong>  &nbsp; {{transaction.internalControlNo}}</div>
 
-        <div *ngIf="transaction.presentationTime" class="fx-row-container nowrap">
+      <div class="primary-text">
+        <strong>{{transaction?.transactionID}}</strong>  &nbsp; {{transaction.internalControlNo}}
+      </div>
 
-          <div class="fx-item-size underline-text" style="--size: 60px">Presentado:</div>
+      <div *ngIf="transaction.presentationTime" class="fx-row-container nowrap">
+
+        <div class="fx-item-size underline-text" style="--size: 60px">Presentado:</div>
         {{transaction?.presentationTime | empDateTimeFormat: 'DMY HH:mm'}}
 
-        </div>
+      </div>
 
-        <div *ngIf="transaction.registrationTime" class="fx-row-container nowrap">
+      <div *ngIf="transaction.registrationTime" class="fx-row-container nowrap">
 
-          <div class="fx-item-size underline-text" style="--size: 60px">Registrado:</div>
+        <div class="fx-item-size underline-text" style="--size: 60px">Registrado:</div>
         {{transaction?.registrationTime | empDateTimeFormat: 'DMY HH:mm'}}
 
-        </div>
       </div>
+
     </div>
   </div>
 
-  <div class="fx-item-size" style="--size: 20%">
+  <div class="fx-item-size sm-fx-item-none" style="--size: 20%">
     <div class="label nowrap">Lo tiene:</div>
     <div class="primary-text"><strong>{{transaction.assignedToName}}</strong></div>
     <div>{{transaction.statusName}}</div>
   </div>
 
-  <div class="fx-item-size" style="--size: 15%">
+  <div class="fx-item-size sm-fx-item-none" style="--size: 80px">
     <ng-container *ngIf="transaction.nextStatusName !== 'No determinado'">
       <div class="label nowrap">Siguiente estado:</div>
       <div>{{transaction.nextStatusName}}</div>
     </ng-container>
   </div>
 
-  <div class="fx-item-size" style="--size: 30px">
+  <div class="fx-item-size sm-fx-item-none" style="--size: 30px">
     <div class="primary-text nowrap">
 
       <emp-ng-menu [items]="listOptions" [config]="{hideMenuIfOneItem: true}"
