--- a/src/app/views/search-services/record-search/record-search.component.html
+++ b/src/app/views/search-services/record-search/record-search.component.html
@@ -33,7 +33,7 @@
 
           </emp-land-record-search-filter>
 
-          <emp-land-record-search-list class="fx-item"
+          <emp-land-record-search-list class="fx-item" [style.width.%]="100"
             [recordsList]="data.records"
             [recordSearchType]="data.recordSearchQuery.type"
             [queryExecuted]="data.queryExecuted"
