Fix: validate error when printing payment-order

--- a/src/app/views/transactions/transaction-header/transaction-header.component.html
+++ b/src/app/views/transactions/transaction-header/transaction-header.component.html
@@ -113,7 +113,7 @@
         </button>
       </div>
 
-      <div class="fx-item-none fx-item-end">
+      <div class="fx-item-none fx-row-container">
 
         <button *ngIf="transaction.actions.can.printControlVoucher"
           type="submit" class="btn-action"
