Sync core modules with latest updates (core, main-layout, shared)

--- a/src/app/shared/containers/file-preview/file-preview.component.html
+++ b/src/app/shared/containers/file-preview/file-preview.component.html
@@ -1,10 +1,10 @@
-<emp-ng-modal-window *ngIf="displayInModal"
+<emp-ng-modal-window *ngIf="displayModal"
   [config]="{width:'80%', height: '90%', maxWidth: '960px'}">
 
   <emp-ng-card
     [title]="title"
     [hint]="hint"
-    (cardClose)="onClose()">
+    (cardClose)="onCloseClicked()">
 
     <div class="preview-container preview-padding" *ngIf="!hasError">
 
